--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -23,17 +23,18 @@
  
  
 <ion-content padding>
-  <ion-list>
 
-    
-      <ion-item *ngFor="let item of myfriends" (click)="friendchat(item)">
+ <ion-card>
+  <ion-list>
+      <ion-item padding-bottom *ngFor="let item of myfriends" (click)="friendchat(item)" style="border-radius:5px; border: .5px solid gray">      
+        <ion-item>  
           <ion-avatar item-left>
               <img src="{{item.photoURL}}">
             </ion-avatar>
-        <button style="text-align: left; background-color: white; font-size: 14pt; width:100%; height:55px; border-radius:5px; border: 1px solid cornflowerblue; padding-left: 15px">
-          <h4 style="color: cornflowerblue">{{item.displayName}}</h4>
-        </button>
+            <h3>{{item.displayName}}</h3>
+        </ion-item>
       </ion-item>
     
   </ion-list>
+</ion-card>
 </ion-content>
